Fixed the gap

--- a/Index.css
+++ b/Index.css
@@ -124,8 +124,7 @@ body{
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    transform: translateX(0vw);
-    gap: 0 1vw 0 1vw;
+    gap: 0.75vw;
 }
 
 .ContentContainer{
